Implement flex_participant_enumerate

--- a/conf/participants.conf
+++ b/conf/participants.conf
@@ -1,13 +1,3 @@
-participantId,active,conferenceId,accessLevel,displayName,connectionState,calls,addresses
-ugl3jh8b-b9ln-sq35-2ijk-11jxifsdojoy,True,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-1,connected,{'callID': 'ugl3jh8b-b9ln-sq35-2ijk-11jxifsdojoy', 'incoming': True, 'address': '11111110001'},{'URI': '9001'}
-dp889oqa-tpq6-os33-h5pa-u621twmq3wo6,True,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-2,connected,{'callID': 'dp889oqa-tpq6-os33-h5pa-u621twmq3wo6', 'incoming': True, 'address': '11111110002'},{'URI': '9002'}
-s2tleey2-a0i5-lx0u-m5wh-bk2b32sgyajm,True,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-1,connected,{'callID': 's2tleey2-a0i5-lx0u-m5wh-bk2b32sgyajm', 'incoming': True, 'address': '11111110001'},{'URI': '9001'}
-1e0op1u1-iady-2tu8-i3he-0yenrr3tw57v,True,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-2,connected,{'callID': '1e0op1u1-iady-2tu8-i3he-0yenrr3tw57v', 'incoming': True, 'address': '11111110002'},{'URI': '9002'}
-krb7obo2-7gaj-93g8-5gfp-ux2x93y1c2ua,True,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-1,connected,{'callID': 'krb7obo2-7gaj-93g8-5gfp-ux2x93y1c2ua', 'incoming': True, 'address': '11111110001'},{'URI': '9001'}
-211phoqh-cxdt-surk-wlng-ro03y83hyrmm,True,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-2,connected,{'callID': '211phoqh-cxdt-surk-wlng-ro03y83hyrmm', 'incoming': True, 'address': '11111110002'},{'URI': '9002'}
-rqf5zjzc-gbqs-ms2x-o8qw-xa3j2w38me1j,True,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-1,connected,{'callID': 'rqf5zjzc-gbqs-ms2x-o8qw-xa3j2w38me1j', 'incoming': True, 'address': '11111110001'},{'URI': '9001'}
-hzkudl2s-95a7-erc4-uj0t-xboq73rsa059,True,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-2,connected,{'callID': 'hzkudl2s-95a7-erc4-uj0t-xboq73rsa059', 'incoming': True, 'address': '11111110002'},{'URI': '9002'}
-7p0ef2k9-vhob-uxvx-p9cz-cbq4ps90r76b,True,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-1,connected,{'callID': '7p0ef2k9-vhob-uxvx-p9cz-cbq4ps90r76b', 'incoming': True, 'address': '11111110001'},{'URI': '9001'}
-9nh9qmu6-ckt5-2kju-d62v-nac8ekglk9ag,True,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-2,connected,{'callID': '9nh9qmu6-ckt5-2kju-d62v-nac8ekglk9ag', 'incoming': True, 'address': '11111110002'},{'URI': '9002'}
-0tq3ccp8-4g7z-r96w-itv0-tesibrh7vwvh,True,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-1,connected,{'callID': '0tq3ccp8-4g7z-r96w-itv0-tesibrh7vwvh', 'incoming': True, 'address': '11111110001'},{'URI': '9001'}
-u50d8yib-7eeh-54i3-wq42-75hec3sorzq7,True,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-2,connected,{'callID': 'u50d8yib-7eeh-54i3-wq42-75hec3sorzq7', 'incoming': True, 'address': '11111110002'},{'URI': '9002'}
+active,participantId,conferenceId,accessLevel,displayName,connectionState,calls,addresses
+True,wd1b3nks-v44b-yf16-bzgu-uy3g6ftj1a5x,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-1,connected,callID:wd1b3nks-v44b-yf16-bzgu-uy3g6ftj1a5x incoming: True address: 11111110001,URI: 9001
+True,xk77t06r-cybn-xzpl-buf5-b5396bn1a4gv,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-2,connected,callID:xk77t06r-cybn-xzpl-buf5-b5396bn1a4gv incoming: True address: 11111110002,URI: 9002
