--- a/conf/participants.conf
+++ b/conf/participants.conf
@@ -1,3 +1,3 @@
-active,participantId,conferenceId,accessLevel,displayName,connectionState,calls,addresses
-True,wd1b3nks-v44b-yf16-bzgu-uy3g6ftj1a5x,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-1,connected,callID:wd1b3nks-v44b-yf16-bzgu-uy3g6ftj1a5x incoming: True address: 11111110001,URI: 9001
-True,xk77t06r-cybn-xzpl-buf5-b5396bn1a4gv,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-2,connected,callID:xk77t06r-cybn-xzpl-buf5-b5396bn1a4gv incoming: True address: 11111110002,URI: 9002
+active,participantID,conferenceID,accessLevel,displayName,connectionState,calls,addresses
+True,1uoj602g-fgk0-tcul-o82t-ezuf8hcg7ytw,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-1,connected,callID:1uoj602g-fgk0-tcul-o82t-ezuf8hcg7ytw incoming: True address: 11111110001,URI: 9001
+True,9xb84lwm-mbb4-s0f7-mhcj-m9gprzi1m1zf,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-2,connected,callID:9xb84lwm-mbb4-s0f7-mhcj-m9gprzi1m1zf incoming: True address: 11111110002,URI: 9002
