Add flex_participant_requestDiagnostics, start SoaPServer & Client

--- a/conf/participants.conf
+++ b/conf/participants.conf
@@ -1,11 +1,13 @@
 active,participantID,conferenceID,accessLevel,displayName,connectionState,calls,addresses
-True,u11783le-9ksd-e1i6-4wlg-esoeqt6q1o95,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-1,connected,callID:u11783le-9ksd-e1i6-4wlg-esoeqt6q1o95 incoming: True address: 11111110001,URI: 9001
-True,xojpdk2w-685z-6h6x-sssb-dkwptgo7egbp,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-2,connected,callID:xojpdk2w-685z-6h6x-sssb-dkwptgo7egbp incoming: True address: 11111110002,URI: 9002
-True,bt5hs50o-tsx4-9mds-7dxt-e65wm9r9zggc,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-3,connected,callID:bt5hs50o-tsx4-9mds-7dxt-e65wm9r9zggc incoming: True address: 11111110003,URI: 9003
-True,700k5pra-bd2a-i0va-j5o5-9pjolm6hv9uu,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-4,connected,callID:700k5pra-bd2a-i0va-j5o5-9pjolm6hv9uu incoming: True address: 11111110004,URI: 9004
-True,0ub7rud6-ut5o-rxni-3cvt-zry1hqxamq49,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-5,connected,callID:0ub7rud6-ut5o-rxni-3cvt-zry1hqxamq49 incoming: True address: 11111110005,URI: 9005
-True,pv87wxfs-nffb-7foe-le7f-jnjttjv76lwu,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-6,connected,callID:pv87wxfs-nffb-7foe-le7f-jnjttjv76lwu incoming: True address: 11111110006,URI: 9006
-True,8w0utac9-rsoc-v26l-cgp6-lfd116phslb5,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-7,connected,callID:8w0utac9-rsoc-v26l-cgp6-lfd116phslb5 incoming: True address: 11111110007,URI: 9007
-True,ph31ji51-nuh5-p5lu-oxrx-h6u07u9quzp7,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-8,connected,callID:ph31ji51-nuh5-p5lu-oxrx-h6u07u9quzp7 incoming: True address: 11111110008,URI: 9008
-True,01qtsmvg-htmn-vtad-covf-ttww30pcu056,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-9,connected,callID:01qtsmvg-htmn-vtad-covf-ttww30pcu056 incoming: True address: 11111110009,URI: 9009
-True,3ry8ycr3-ntdv-gea4-u3gq-4ofuc7im7nsn,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-10,connected,callID:3ry8ycr3-ntdv-gea4-u3gq-4ofuc7im7nsn incoming: True address: 111111100010,URI: 90010
+True,9qygxvio-d8ec-nkhz-dvmg-g152g3ctz9ib,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-17132001001,connected,callID:9qygxvio-d8ec-nkhz-dvmg-g152g3ctz9ib incoming: True address: 17132001001,URI: 17132001001
+True,fi3031x1-djfj-8kjd-0oxa-n66lta9pih9n,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-17132001002,connected,callID:fi3031x1-djfj-8kjd-0oxa-n66lta9pih9n incoming: True address: 17132001002,URI: 17132001002
+True,i2h0ohk9-26ev-q1i8-4wed-832458yfk3c9,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-1,connected,callID:i2h0ohk9-26ev-q1i8-4wed-832458yfk3c9 incoming: True address: 11111110001,URI: 9001
+True,q745mnvn-xnmk-w2ja-mjfr-99pzjji3gb8d,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-2,connected,callID:q745mnvn-xnmk-w2ja-mjfr-99pzjji3gb8d incoming: True address: 11111110002,URI: 9002
+True,5x9a0sqp-1q1t-16fz-iym1-qrc9k5bq6pql,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-3,connected,callID:5x9a0sqp-1q1t-16fz-iym1-qrc9k5bq6pql incoming: True address: 11111110003,URI: 9003
+True,9ttfeswf-x35t-kmh8-l03a-me7nu70xybam,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-4,connected,callID:9ttfeswf-x35t-kmh8-l03a-me7nu70xybam incoming: True address: 11111110004,URI: 9004
+True,b9r6rntx-wpwb-4ehf-4iib-tnfxykucf1tw,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-5,connected,callID:b9r6rntx-wpwb-4ehf-4iib-tnfxykucf1tw incoming: True address: 11111110005,URI: 9005
+True,kz1469ul-3887-syof-2mb5-7hzwqbdlh7ez,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-6,connected,callID:kz1469ul-3887-syof-2mb5-7hzwqbdlh7ez incoming: True address: 11111110006,URI: 9006
+True,pbd6m917-yu0p-yush-f6xx-2y0f3se1gpgx,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-7,connected,callID:pbd6m917-yu0p-yush-f6xx-2y0f3se1gpgx incoming: True address: 11111110007,URI: 9007
+True,ebcy3349-zohk-mc34-w4f3-egtz3so168nn,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-8,connected,callID:ebcy3349-zohk-mc34-w4f3-egtz3so168nn incoming: True address: 11111110008,URI: 9008
+True,6k53jvj4-cs79-lu4i-ae7v-csej4hlbsp93,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-9,connected,callID:6k53jvj4-cs79-lu4i-ae7v-csej4hlbsp93 incoming: True address: 11111110009,URI: 9009
+True,kjq3lc6c-lgm3-9gnh-ihh7-sccom62vh6i6,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-10,connected,callID:kjq3lc6c-lgm3-9gnh-ihh7-sccom62vh6i6 incoming: True address: 111111100010,URI: 90010
