Update media information

--- a/conf/participants.conf
+++ b/conf/participants.conf
@@ -1,1 +1,8 @@
 active,participantID,conferenceID,accessLevel,displayName,connectionState,calls,addresses
+True,7tqnvxdy-ghi1-5lt3-37me-5w5x1v3bn8y7,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-16305558000,connected,callID:7tqnvxdy-ghi1-5lt3-37me-5w5x1v3bn8y7 incoming: True address: 16305558000,URI: 16305558000
+True,uoaki0n4-q2ha-rdf4-xzb2-b07ij1jivaam,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-16305558001,connected,callID:uoaki0n4-q2ha-rdf4-xzb2-b07ij1jivaam incoming: True address: 16305558001,URI: 16305558001
+True,2rz3psvk-01xf-8hkl-6y4o-y7qktfpyg8il,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-1,connected,callID:2rz3psvk-01xf-8hkl-6y4o-y7qktfpyg8il incoming: True address: 11111110001,URI: 9001
+True,re9gcp36-ocn8-57gw-s8ne-bq44ph9u1pve,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-2,connected,callID:re9gcp36-ocn8-57gw-s8ne-bq44ph9u1pve incoming: True address: 11111110002,URI: 9002
+True,lw3xjzt4-l5ty-8ns8-dujy-hzaniqfjchcv,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-3,connected,callID:lw3xjzt4-l5ty-8ns8-dujy-hzaniqfjchcv incoming: True address: 11111110003,URI: 9003
+True,r1w89f89-qppr-zunc-opw1-hp6acx96h9ee,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-4,connected,callID:r1w89f89-qppr-zunc-opw1-hp6acx96h9ee incoming: True address: 11111110004,URI: 9004
+True,lrxpqagh-r3n2-ew3c-1pxe-8u3rymqfq3qd,8ca0c690-dd82-11e2-84f9-000d7c112b10,chair,endpoint-5,connected,callID:lrxpqagh-r3n2-ew3c-1pxe-8u3rymqfq3qd incoming: True address: 11111110005,URI: 9005
